Fix margin of the image caption
the `margin: -2em auto` actually sets `-2em` for `-top` and `-bottom`,
which caused the following text to overlap with the caption.

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -117,7 +117,8 @@ img {
 img + em {
   display: block;
   text-align: center;
-  margin: -2em auto;
+  margin-top: -2em;
+  margin-bottom: 2em;
 }
 
 .logo {
